Profile page updated

--- a/profile.html
+++ b/profile.html
@@ -58,7 +58,7 @@
                        <li><a href="#" class="menu-item">photos</a></li>
                     </ul>
                     <div class="menu_button ms-auto">
-                        <a href="#" class="add_to_book"><i class="fas fa-plus-circle"></i>Add to Book</a>
+                        <a href="#" class="add_to_book"><i class="fas fa-plus-circle"></i>Add New Book</a>
                         <a href="#" class="edit_profile"><i class="fas fa-pen"></i>Edit Profile</a> 
                     </div>
                   </div>
@@ -166,8 +166,8 @@
                                     </div> 
                                 </div>
                                 <div class="col-sm-4">
-                                    <div class="write">
-                                        <input type="file" id="cover_phpto"><label for="cover_phpto"><i class="far fa-edit me-sm-2 mx-auto"></i><span class="d-sm-inline d-none">Write</span></label> 
+                                    <div class="write" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <span class="d-sm-inline d-none"><i class="far fa-edit me-sm-2 mx-auto"></i>Write</span>
                                     </div> 
                                 </div>
                             </div>
