lending book list,  request book page and request modal added

--- a/main_library.html
+++ b/main_library.html
@@ -115,6 +115,9 @@
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
                                     </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -130,6 +133,9 @@
                                 <div class="expand_book">
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
+                                    </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
                                     </a>
                                 </div>
                             </div>
@@ -147,6 +153,9 @@
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
                                     </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -162,6 +171,9 @@
                                 <div class="expand_book">
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
+                                    </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
                                     </a>
                                 </div>
                             </div>
@@ -179,6 +191,9 @@
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
                                     </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -194,6 +209,9 @@
                                 <div class="expand_book">
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
+                                    </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
                                     </a>
                                 </div>
                             </div>
@@ -211,6 +229,9 @@
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
                                     </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -226,6 +247,9 @@
                                 <div class="expand_book">
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
+                                    </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
                                     </a>
                                 </div>
                             </div>
@@ -243,6 +267,9 @@
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
                                     </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -258,6 +285,9 @@
                                 <div class="expand_book">
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
+                                    </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
                                     </a>
                                 </div>
                             </div>
@@ -275,6 +305,9 @@
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
                                     </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -290,6 +323,9 @@
                                 <div class="expand_book">
                                     <a href="book_details.html">
                                         <i class="fas fa-eye"></i>
+                                    </a>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fas fa-hand-holding-medical"></i>
                                     </a>
                                 </div>
                             </div>
@@ -299,6 +335,49 @@
             </div>
         </div>
     </section>
+
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title ms-auto" id="exampleModalLabel">আপনার ব্যক্তিগত তথ্য দিন</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <div class="lending_info">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="lending_user_info">
+                            <div class="user_form">
+                                <form action="">
+                                    <div class="personal_info">
+                                        <input class="form-control" type="text" placeholder="Your name">
+                                        <input class="form-control" type="text" placeholder="Your phone">
+                                        <input class="form-control" type="email" placeholder="Your email">
+                                        <input class="form-control" type="text" placeholder="Your address">
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text" id="basic-addon3">Receiving date</span>
+                                            <input type="date" class="form-control mb-0" id="basic-url" aria-describedby="basic-addon3">
+                                        </div>
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text" id="basic-addon3">Returning date</span>
+                                            <input type="date" class="form-control mb-0" id="basic-url" aria-describedby="basic-addon3">
+                                        </div>
+                                        <input class="btn btn-primary w-100" type="submit" value="রিকুয়েস্ট পাঠান">
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
     <!-- Main content section end -->
          
      
